--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 NODE_ENV=development
 PORT=8000
 USER=marwanaelabhar
-PASSWORD=v3CYaNJFNd8SW9ce
-DB=mongodb+srv://marwanaelabhar:v3CYaNJFNd8SW9ce@cluster0.po5uu0r.mongodb.net/?appName=Cluster0
+PASSWORD=
+DB=
 
 JWT_SECRET=moi-ultra-secure-und-ultra-long-secret
 JWT_EXPIRES_IN=90d
