send cookie to user

--- a/config.env
+++ b/config.env
@@ -6,6 +6,7 @@ DB=mongodb+srv://marwanaelabhar:v3CYaNJFNd8SW9ce@cluster0.po5uu0r.mongodb.net/?a
 
 JWT_SECRET=moi-ultra-secure-und-ultra-long-secret
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_USERNAME=3de4bd5d4326ec
 EMAIL_PASSWORD=d9ddc820d54c67
